<resources>
    <string name="app_name">Tilim.uz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lotin_rus_change">Lotin-Крилл</string>
    <string name="rus_lotin_change">Крилл-Lotin</string>
    <string name="tilim_uz">TILIM.UZ</string>
    <string name="menu_for_terms_of_service">Protected by reCAPTCHA - Privacy Policy and Terms of Service</string>
    <string name="menu_for_copyrigth">Copyright © 2022 AIRI Group Co., Ltd. All rights reserved.</string>
    <string name="matn">Matn</string>
    <string name="lotin">Lotin</string>
    <string name="krill">Крилл</string>
    <string name="ovoz_yozish_ishlab_chiqilmoqda">Ovoz yozish\' ishlab chiqilmoqda.</string>
    <string name="hujjat">Hujjat</string>
    <string name="ko_pi_bilan_bitta_hujjat_yuklay_olasiz">Ko\'pi bilan bitta hujjat yuklay olasiz.</string>
    <string name="note">Eslatma:</string>
    <string name="jo_natilgan_hujjat">Jo\'natilgan hujjat:</string>
    <string name="word_file_name_of_the">Word file: name of the :</string>
    <string name="bajarilmoqda">Bajarilmoqda...</string>
    <string name="loyiha_haqida">Loyiha haqida</string>
    <string name="loyiha_haqida_matn">Ushbu loyiha O‘zbek tilini rivojlantirish uchun ishlab chiqilgan. Loyiha Raqamli texnologiyalar va sun’iy intellektni rivojlantirish ilmiy tadqiqot institutining yosh dasturchilar jamoasi tomonidan ishlab chiqildi. Tilim.uzdan hamma istalgan joyda, istalgan vaqtda- <b>oson</b> va <b>mutlaqo bepul</b> foydalanishi mumkin. Loyihada Lotin-Kirill va Kirill-Lotin o‘girish tizimi, sun’iy intellekt texnologiyasi asosida matndagi xatolarni aniqlash va matnning ma’nosiga qarab keyingi so‘zlarni aniqlash tizimi va matnli ma’lumotlarni ovozli xabarga va ovozli xabarni matnli ma’lumotga aylantirish tizimi joriy qilingan.</string>
    <string name="biyimbetov_azizbek">Biyimbetov Azizbek</string>
    <string name="xakulov_azim">Xakulov Azim</string>
    <string name="jabborov_abduraxim">Jabborov Abduraxim</string>
    <string name="abdumajitov_umirzoq">Abdumajitov Umirzoq</string>
    <string name="jo_rabekov_sherzod">Jo\'rabekov Sherzod</string>
    <string name="to_lqinov_foziljon">To‘lqinov Foziljon</string>
    <string name="rahimov_yahyoxon">Rahimov Yahyoxon</string>
    <string name="oripov_g_iyos">Oripov G‘iyos</string>
    <string name="usmonov_ulug_bek">Usmonov Ulug‘bek</string>
    <string name="zohidov_shaxboz">Zohidov Shaxboz</string>
    <string name="mamadaliyev_shahriyor">Mamadaliyev Shahriyor</string>
    <string name="jabborov_kamoladdin">Jabborov Kamoladdin</string>
    <string name="shoyimov_samandar">Shoyimov Samandar</string>
    <string name="mirjamol_bekhzod">Mirjamol Bekhzod</string>
    <string name="abduvaliyev_jasur">Abduvaliyev Jasur</string>
    <string name="biz_bilan_bog_lanish">Biz bilan bog\'lanish</string>
</resources>