<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




<!--    header-->
    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F6F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dp"
                    android:gravity="center"
                    android:text="@string/tilim_uz"
                    android:textColor="#3474DF"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>
    </LinearLayout>
<!--  list-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header">

        <TextView
            android:id="@+id/loyiha_haqida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loyiha haqida"
            android:textColor="@color/letter_color"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_boglanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Bog'lanish"
            android:textColor="@color/letter_color"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_xavfsizlik_siyosat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Xavfsizlik siyosat"
            android:textColor="@color/letter_color"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_foydalanuvchi_siyosati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Foydalanuvchi siyosati"
            android:textColor="@color/letter_color"
            android:textSize="22dp" />
    </LinearLayout>

    <!--options-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/iv_insta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:src="@drawable/ic_insta" />

            <ImageView
                android:id="@+id/iv_telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_telegram" />

            <ImageView
                android:id="@+id/iv_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_github" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:maxLines="2"
            android:text="@string/menu_for_copyrigth"
            android:textColor="#828696"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="50dp"
            android:maxLines="2"
            android:text="@string/menu_for_terms_of_service"
            android:textColor="#828696" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>