<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- istalgan dizaynni yigasiz-->
            <!--    header-->
            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F6F6F7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_gravity="top"
                            android:src="@drawable/ic_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="6dp"
                            android:gravity="center"
                            android:text="@string/tilim_uz"
                            android:textColor="#3474DF"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_cancel" />
                </LinearLayout>
            </LinearLayout>
            <!--  list-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_header">

                <TextView
                    android:id="@+id/loyiha_haqida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Loyiha haqida"
                    android:textColor="@color/letter_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_boglanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Bog'lanish"
                    android:textColor="@color/letter_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_xavfsizlik_siyosat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Xavfsizlik siyosat"
                    android:textColor="@color/letter_color"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_foydalanuvchi_siyosati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Foydalanuvchi siyosati"
                    android:textColor="@color/letter_color"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!--options-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:paddingTop="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:id="@+id/iv_insta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:src="@drawable/ic_insta" />

                    <ImageView
                        android:id="@+id/iv_telegram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_telegram" />

                    <ImageView
                        android:id="@+id/iv_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_github" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="50dp"
                    android:maxLines="2"
                    android:text="@string/menu_for_copyrigth"
                    android:textColor="#828696"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="50dp"
                    android:maxLines="2"
                    android:textSize="13sp"
                    android:text="@string/menu_for_terms_of_service"
                    android:textColor="#828696" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.boglanish.activity.MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#F6F6F7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_menu"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_menu" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_logo" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="6dp"
                                android:text="TILIM.UZ"
                                android:textColor="#3474DF"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/ligiht_night" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.AppBarLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_matn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/matn"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:background="@drawable/bg_fragment_click"
                    android:textColor="@color/fon_color_click"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_hujjat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/hujjat"
                    android:background="@drawable/bg_fragment_noclick"
                    android:textColor="#E8EBF2"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:defaultNavHost="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navGraph="@navigation/main_graph" />

        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>